Fix template configuration
Uncomment out mongo credentials, fix method-spec-mongo-password default variable to method_spec_mongo_password

--- a/deployment/conf/.templates/deployment.cfg.templ
+++ b/deployment/conf/.templates/deployment.cfg.templ
@@ -35,8 +35,8 @@ max-memory = {{ default .Env.max_memory "1500" }}
 method-spec-temp-dir = {{ default .Env.method_spec_temp_dir "/scratch/narrative_method_store_temp" }}
 method-spec-mongo-host = {{ default .Env.method_spec_mongo_host "localhost:27017" }}
 method-spec-mongo-dbname = {{ default .Env.method_spec_mongo_dbname "method_store_repo_db" }}
-# method-spec-mongo-user = {{ default .Env.method_spec_mongo_user "mongouser" }}
-# method-spec-mongo-password = {{ default .Env.method_spec_git_repo "" }}
+method-spec-mongo-user = {{ default .Env.method_spec_mongo_user "mongouser" }}
+method-spec-mongo-password = {{ default .Env.method_spec_mongo_password "" }}
 method-spec-admin-users = {{ default .Env.method_spec_admin_users "kbaseadmin,kbaseadmin2" }}
 # method-spec-shock-url = {{ default .Env.method_spec_shock_url "" }}
 # method-spec-shock-user = {{ default .Env.method_spec_shock_user "" }}
